--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       annotations:
-        secret.reloader.stakater.com/reload: "fastapi-secrets"
+        secret.reloader.stakater.com/reload: "youtube-music-sync-secrets"
       labels:
         app: youtube-music-sync
     spec:
@@ -22,7 +22,7 @@ spec:
         - name: MY_ENV_VAR
           valueFrom:
             secretKeyRef:
-              name: fastapi-secrets
+              name: youtube-music-sync-secrets
               key: MY_ENV_VAR
         ports:
         - containerPort: 8000
