fix: update command in deployment.yaml to use streamlit for running dashboard

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
           image: ghcr.io/krishnarajt/youtube-music-sync:git-bootstrap
           imagePullPolicy: IfNotPresent
 
-          command: ["python", "dashboard.py"]
+          command: ["streamlit", "run", "dashboard.py"]
 
           env:
             - name: PYTHONUNBUFFERED
